--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am a software engineer working with Rails, Vue, and Angular. Alw
 social-twitter: charlesminderhout # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: charminder # add your Github handle
-social-linkedin charlesminderhout: # add your Linkedin handle
+social-linkedin: charlesminderhout # add your Linkedin handle
 social-email: charleswminderhout@outlook.com # add your Email address
 
 # Disqus
