--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Charles Minderhout # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: charles-minderhout.jpg # add your photo
 about-author: I am a software engineer working with Rails, Vue, and Angular. Always hungry to keep learning and push myself further. # add description
 social-twitter: charlesminderhout # add your Twitter handle
 social-facebook: # add your Facebook handle
