--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social-linkedin: charlesminderhout # add your Linkedin handle
 social-email: charleswminderhout@outlook.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier:  # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
